2000-11-13  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/alpha/fpu/libm-test-ulps: Update.

2000-11-10  H.J. Lu  <hjl@gnu.org>

	* sysdeps/ia64/fpu/libm-test-ulps: Updated.

2000-11-10  Andreas Jaeger  <aj@suse.de>

	* elf/ldconfig.c (create_links): Fix alloca calculation.
	Patch by Ben Collins <bcollins@debian.org>.

2000-11-09  Ulrich Drepper  <drepper@redhat.com>

	* inet/getnameinfo.c (getnameinfo): Use correct destination
	parameter for if_indextoname.
	Patch by Hideaki YOSHIFUJI <yoshfuji@linux-ipv6.org>.

2000-11-09  H.J. Lu  <hjl@gnu.org>

	* sunrpc/Versions (GLIBC_2.1): Remove xdr_cryptkeyarg,
	xdr_cryptkeyarg2, xdr_cryptkeyres, xdr_des_block,
	xdr_key_netstarg, xdr_key_netstres, xdr_keybuf and
	xdr_keystatus.

	* time/Versions (GLIBC_2.1): Move getitimer to...
	* sysdeps/unix/sysv/linux/alpha/Versions (GLIBC_2.1): ...here.

2000-11-03  Bruno Haible  <haible@clisp.cons.org>

	* manual/install.texi: Recommend to set LANGUAGE=C LC_ALL-C during
	"make install", to work around a binary incompatibility between
	glibc 2.1 and glibc 2.2 gconv modules.

2000-11-09  Ulrich Drepper  <drepper@redhat.com>

	* intl/locale.alias: Add thai.
	Patch by Chanop Silpa-Anan <chanop@syseng.anu.edu.au>.

2000-11-07  Akim Demaille  <akim@epita.fr>

	* malloc/obstack.c (obstack_grow, obstack_grow0): Rename the second
	argument `data' for consistency with the prototypes.
	Qualify it `const'.
	(obstack_copy, obstack_copy0): Rename the second argument as
	`address' for consistency.  Qualify it `const'.
	* malloc/obstack.h (obstack_copy, obstack_copy0, obstack_grow)
	(obstack_grow0, obstack_ptr_grow, obstack_ptr_grow_fast): Qualify
	`const' their input argument (`data' or `address').
	Adjust the corresponding macros to include `const' in casts.

2000-11-06  Hideaki YOSHIFUJI  <yoshfuji@linux-ipv6.org>

	* sysdeps/posix/getaddrinfo.c: Clean-up: define family to hold
	target family.

2000-11-06  Hideaki YOSHIFUJI  <yoshfuji@linux-ipv6.org>
